removed default stuff, added SQL connection

--- a/ProjectManagementAPI/appsettings.json
+++ b/ProjectManagementAPI/appsettings.json
@@ -6,11 +6,11 @@
     }
   },
   "AllowedHosts": "*",
-  
-    "ConnectionStrings": {
-      "DefaultConnection": "Server=localhost;Database=ProjectManagement;Trusted_Connection=True;"
-    }
-  
 
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=CompanyDatabase;Integrated Security=true;TrustServerCertificate=True;"
+  },
+
+  
 }
 
