--- a/clientapp/package.json
+++ b/clientapp/package.json
@@ -10,9 +10,11 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.5.14",
     "ag-grid-react": "^33.2.4",
+    "apexcharts": "^4.7.0",
     "bootstrap": "^5.3.5",
     "cross-env": "^7.0.3",
     "react": "^19.1.0",
+    "react-apexcharts": "^1.7.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.3",
